@@ -42,7 +42,7 @@ import static uk.gov.hmcts.reform.civil.enums.CaseCategory.SPEC_CLAIM;
  * at most one implementation handling the case.</p>
  */
 @ExtendWith(SpringExtension.class)
-public class CaseDataToTextGeneratorTest {
+class CaseDataToTextGeneratorTest {
 
     @SuppressWarnings("rawtypes")
     private final List<CaseDataToTextGeneratorIntentionConfig> intentionConfigs = List.of(
@@ -57,7 +57,7 @@ public class CaseDataToTextGeneratorTest {
      */
     @SuppressWarnings({"SuspiciousMethodCalls", "rawtypes", "unchecked"})
     @Test
-    public void allGeneratorsMustBeChecked() {
+    void allGeneratorsMustBeChecked() {
         AnnotationConfigApplicationContext context = new AnnotationConfigApplicationContext(
             CaseDataToTextGeneratorTestConfig.class);
         Collection<CaseDataToTextGenerator> allGenerators = context.getBeansOfType(CaseDataToTextGenerator.class)
@@ -91,14 +91,14 @@ public class CaseDataToTextGeneratorTest {
 
         List<T> generators = allGenerators.stream().filter(intentionInterface::isInstance)
             .map(intentionInterface::cast)
-            .collect(Collectors.toList());
+            .toList();
         List<T> usedGenerators = new ArrayList<>();
         List<Pair<CaseData, Class<? extends T>>> cases = config.getCasesToExpectedImplementation();
         for (int i = 0; i < cases.size(); i++) {
             CaseData currentCase = cases.get(i).getLeft();
             List<T> suitable = generators.stream()
                 .filter(generator -> generator.generateTextFor(currentCase).isPresent())
-                .collect(Collectors.toList());
+                .toList();
             Assertions.assertEquals(1, suitable.size(),
                                     "There should be exactly 1 suitable generator per case."
                                         + "Case in position " + i + " has " + suitable.size()
